--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -27,7 +27,7 @@ newsletter-er, to rescue the meat of your dispatches from the inbox: I recommend
 it!
 #+end_quote
 
-That's not an email newsletter, that's spam. What you're doing is blogging and emailing me a link to new posts. If all I wanted was to be notified that you posted something new, there's RSS.
+That's not an email newsletter, that's spam. What you're doing is blogging and emailing me a link to new posts. If all I wanted was to be notified that you posted something on your blog, there's RSS.
 
 Unsubscribed[fn:1]
 
