--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -11,7 +11,7 @@
 :PROPERTIES:
 :EXPORT_HUGO_SECTION: post/2021
 :END:
-** DONE Software proliferation :@Tech:
+** DONE Software proliferation :@Tech:Software:Workflow:
 CLOSED: [2021-08-12 Thu 06:20]
 :PROPERTIES:
 :EXPORT_FILE_NAME: software-proliferation
